<resources>
    <string name="app_name">Final_Android_Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movie_image">Movie Image</string>
    <string name="tv_image">TV Image\n</string>
    <string name="welcome">WELCOME</string>
    <string name="guide_info">Choose Topic To Present</string>
    <string name="movies_btn">MOVIES</string>
    <string name="tv_btn">TV</string>
    <string name="overview">overview:</string>
    <string name="genres">Genres:</string>
    <string name="language">Language:</string>
    <string name="release_date">Release Date:</string>
</resources>