<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_info"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/moviesBtn"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/moviesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies_btn"
        app:layout_constraintBottom_toTopOf="@+id/TVsBtn"
        app:layout_constraintEnd_toEndOf="@+id/guideText"
        app:layout_constraintStart_toStartOf="@+id/guideText"
        app:layout_constraintTop_toBottomOf="@+id/guideText" />

    <Button
        android:id="@+id/TVsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/moviesBtn"
        app:layout_constraintStart_toStartOf="@+id/moviesBtn"
        app:layout_constraintTop_toBottomOf="@+id/moviesBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>